k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: gl-reporting
spec:
  type: ClusterIP
  selector:
    app: gl-reporting-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
