k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-metrics
  namespace: gl-reporting
spec:
  type: ClusterIP
  selector:
    app: gl-reporting-worker
  ports:
    - port: 9100
      targetPort: 9100
      protocol: TCP
      name: metrics
